--- a/gitboot.html
+++ b/gitboot.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <title>johan Cruz</title>
     <link rel="stylesheet" href="bootstrap-5.0.2-dist/css/bootstrap.min.css">
     <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
       <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
