--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
       <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </head>
 <body>
-    <nav class="navbar navbar-expand-lg navbar-light bg-light">
+    <nav class="navbar navbar-expand-lg navbar-light bg-primary">
         <div class="container-fluid">
             <li class="nav-item">
-                <a class="nav-link" href="gitboot.html">MENU</a>
+                <a class="nav-link bg-light" href="index.html">MENU</a>
               </li>
           <a class="navbar-brand" href="ejemplo.html">Actividad 1</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -27,9 +27,14 @@
                 <a class="nav-link" href="ACTIVIDAD3.html">Actividad 3</a>
               </li>
               
-          </div>
+          </div>  
         </div>
       </nav>
+      <div class="container-fluid text-center bg-light">
+        <h1>DISEÑO Y PROGRAMACION WEB II </h1>
+          <h1> ESTUDIANTE:JOHAN PABLO CRUZ HUANCA</h1>
+          <h1>CARRERA: SISTEMAS INFORMATICOS</h1> 
+      </div>
       <script src="bootstrap-5.0.2-dist/js/bootstrap.bundle.min.js"></script>
       <script src="bootstrap-5.0.2-dist/js/bootstrap.min.js"></script>
 </body>
