--- a/2doEjercicio.html
+++ b/2doEjercicio.html
@@ -10,7 +10,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container-fluid">
             <li class="nav-item">
-                <a class="nav-link" href="gitboot.html">MENU</a>
+                <a class="nav-link" href="index.html">MENU</a>
               </li>
           <a class="navbar-brand" href="ejemplo.html">Actividad 1</a>
           <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
