--- a/ejemplo.html
+++ b/ejemplo.html
@@ -20,7 +20,7 @@
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
       <div class="container-fluid">
         <li class="nav-item">
-          <a class="nav-link" href="gitboot.html">MENU</a>
+          <a class="nav-link" href="index.html">MENU</a>
         </li>
         <a class="navbar-brand" href="ejemplo.html">Actividad 1</a>
         <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
@@ -31,9 +31,7 @@
             <li class="nav-item">
               <a class="nav-link active" aria-current="page" href="2doEjercicio.html">Actividad 2</a>
             </li>
-            <li class="nav-item">
-              <a class="nav-link" href="#">Actividad 3</a>
-            </li>
+        
             <li class="nav-item">
               <a class="nav-link" href="ACTIVIDAD3.html">Actividad 3</a>
             </li>
